# upi-fraud-env

./: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  server.py  tasks.py  validate.py
server/: app.py
