[project]
name = "upi-fraud-env"
version = "1.0.0"
description = "OpenEnv environment for UPI fraud prevention and recovery in India"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "openai==1.45.0",
  "httpx==0.27.2",
  "python-multipart==0.0.9",
  "PyYAML==6.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
